# ProjetoDeAlgoritmos

./: .gitignore  CMakeLists.txt  GEMINI.md  Makefile  README.md
ArquivosDeEntrada/Random/: random10.txt  random100.txt  random1000.txt  random10000.txt  random100000.txt
ArquivosDeSaida/Random/: random_sorted10.txt  random_sorted100.txt  random_sorted1000.txt  random_sorted10000.txt  random_sorted100000.txt
ArquivosDeTempo/Crescente/: crescente_time10000.txt  crescente_time100000.txt
ArquivosDeTempo/Decrescente/: decrescente_time100000.txt  decrescente_time1000000.txt
ArquivosDeTempo/Random/: random_time10000.txt  random_time100000.txt  random_time1000000.txt
app/: main.c
include/: algorithms.h  file_handler.h  insertion_sort.h  sequence_generator.h
resultados/bubble_sort/entrada/random/: random10.txt  random100.txt  random1000.txt  random10000.txt  random100000.txt
resultados/bubble_sort/saida/random/: random10.txt  random100.txt  random1000.txt  random10000.txt  random100000.txt
resultados/bubble_sort/tempo/crescente/: crescente1000.txt  crescente10000.txt  crescente100000.txt  crescente1000000.txt
resultados/bubble_sort/tempo/decrescente/: decrescente1000.txt  decrescente10000.txt  decrescente100000.txt  decrescente1000000.txt
resultados/bubble_sort/tempo/random/: random1000.txt  random10000.txt  random100000.txt  random1000000.txt
resultados/insertion_sort/entrada/random/: random10.txt  random100.txt  random1000.txt  random10000.txt  random100000.txt
src/: algorithms.c  file_handler.c  insertion_sort.c  sequence_generator.c
(+51 files in other folders)
